--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -12,7 +12,7 @@
 }
 
 :root {
-  --main-color: #033a80;
+  --main-color: #0066ff;
   --bg-color: #fff;
   --text-color: #0f0c27;
   --hover: hsl(260, 100%, 51%);
